--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -1,3 +1,4 @@
+# displayName: additional text for filtering down the ToC in meaningful way.
 - name: Dokumentation om Speech Service API
   href: index.yml
 - name: Översikt
@@ -13,30 +14,42 @@
       href: get-started.md
     - name: 'Identifiera tal i C# (.NET på Windows)'
       href: quickstart-csharp-dotnet-windows.md
+      displayName: 'recognize speech, speech recognition, speech to text'
     - name: 'Identifiera tal i C# (.NET Core på Windows)'
       href: quickstart-csharp-dotnetcore-windows.md
+      displayName: 'recognize speech, speech recognition, speech to text'
     - name: Identifiera tal i en UWP-app
       href: quickstart-csharp-uwp.md
+      displayName: 'recognize speech, speech recognition, speech to text, C#'
     - name: Identifiera tal i C++ för Windows
       href: quickstart-cpp-windows.md
+      displayName: 'recognize speech, speech recognition, speech to text'
     - name: Identifiera tal i C++ för Linux
       href: quickstart-cpp-linux.md
+      displayName: 'recognize speech, speech recognition, speech to text'
     - name: Identifiera tal i Java för Android
       href: quickstart-java-android.md
+      displayName: 'recognize speech, speech recognition, speech to text'
     - name: Komma igång med Speech Devices SDK
       href: speech-devices-sdk-qsg.md
+      displayName: 'roobo, speech devices sdk'
 - name: Instruktionsguider
   items:
     - name: Identifiera tal
       href: how-to-speech-to-text.md
+      displayName: 'recognize speech, speech recognition, speech to text'
     - name: Syntetisera tal
       href: how-to-text-to-speech.md
+      displayName: 'synthesize speech, speech synthesis, text to speech'
     - name: Översätt tal
       href: how-to-translate-speech.md
+      displayName: 'translate speech, speech translation, translator'
     - name: Batch-transkription
       href: batch-transcription.md
+      displayName: 'recognize speech, speech recognition, speech to text'
     - name: Hämta Speech Devices SDK
       href: get-speech-devices-sdk.md
+      displayName: 'roobo, speech devices sdk, download'
 - name: Anpassning
   items:
     - name: Anpassa akustiska modeller
@@ -55,28 +68,37 @@
       href: how-to-use-audio-input-streams.md
     - name: Anpassa väckningsord för enhet (Devices SDK)
       href: speech-devices-sdk-create-kws.md
+      displayName: 'roobo, speech devices sdk, wake word, keyword spotting, kws'
 - name: Exempel
   items:
     - name: Ladda ned exempel
       href: samples.md
     - name: Taligenkänning
       href: speech-to-text-sample.md
+      displayName: 'recognize speech, speech recognition, speech to text'
     - name: Avsiktsigenkänning
       href: intent.md
+      displayName: 'recognize intent, intent recognition, language understanding service, luis'
     - name: Översättning
       href: translation.md
+      displayName: 'translate speech, speech translation, translator'
 - name: Begrepp
   items:
     - name: Tal till text
       href: speech-to-text.md
+      displayName: 'recognize speech, speech recognition, speech to text'
     - name: Text till tal
       href: text-to-speech.md
+      displayName: 'synthesize speech, speech synthesis, text to speech'
     - name: Talöversättning
       href: speech-translation.md
+      displayName: 'translate speech, speech translation, translator'
     - name: Speech SDK
       href: speech-sdk.md
+      displayName: 'C#, C++, Java, .NET, .NET Core, UWP, Android, Linux, Windows, NuGet, download'
     - name: Speech Devices SDK
       href: speech-devices-sdk.md
+      displayName: 'roobo, speech devices sdk'
 - name: Referens
   items:
     - name: Språk som stöds
@@ -87,37 +109,46 @@
       href: rest-apis.md
     - name: API för Speech SDK
       href: speech-sdk-reference.md
+      displayName: 'C#, C++, Java, .NET, .NET Core, UWP, Android, Linux, Windows'
     - name: Pålägg för talsyntes
       href: speech-synthesis-markup.md
+      displayName: 'synthesize speech, speech synthesis, text to speech'
 - name: Resurser
   items:
+    - name: Viktig information om Speech SDK
+      href: releasenotes.md
     - name: VANLIGA FRÅGOR OCH SVAR
       items:
         - name: Vanliga frågor och svar om tal till text
           href: faq-stt.md
+          displayName: 'recognize speech, speech recognition, speech to text'
         - name: Vanliga frågor och svar om Text till tal
           href: faq-text-to-speech.md
+          displayName: 'synthesize speech, speech synthesis, text to speech'
         - name: Vanliga frågor och svar om Translator
           href: 'https://www.microsoft.com/translator/faq.aspx'
+          displayName: 'translate speech, speech translation, translator'
+    - name: Felsökning
+      href: troubleshooting.md
+    - name: Support
+      href: support.md
+    - name: Leverera ditt program
+      href: ship-application.md
     - name: Prissättning
       href: 'https://azure.microsoft.com/pricing/details/cognitive-services/speech-services/'
-    - name: UserVoice
-      href: 'https://cognitive.uservoice.com/forums/912208-speech-service'
-    - name: Stack Overflow
-      href: 'https://stackoverflow.com/questions/tagged/microsoft-cognitive'
+    - name: Licens / Juridisk information
+      items:
+        - name: Speech SDK-licens
+          href: license.md
+        - name: Meddelanden om tredje part för Speech SDK
+          href: third-party-notices.md
+        - name: Speech Devices SDK-licens
+          href: speech-devices-sdk-license.md
+          displayName: 'roobo, speech devices sdk'
+        - name: Meddelanden om tredje part för Devices SDK
+          href: devices-sdk-third-party-notices.md
+          displayName: 'roobo, speech devices sdk'
     - name: Azure-översikt
       href: 'https://azure.microsoft.com/roadmap/?category=ai-machine-learning'
     - name: Sekretess och cookies
       href: 'https://privacy.microsoft.com/privacystatement'
-    - name: Felsökning
-      href: troubleshooting.md
-    - name: Leverera ditt program
-      href: ship-application.md
-    - name: Viktig information
-      href: releasenotes.md
-    - name: Speech SDK-licens
-      href: license.md
-    - name: Speech Devices SDK-licens
-      href: speech-devices-sdk-license.md
-    - name: Meddelanden om tredje part
-      href: third-party-notices.md
