--- a/articles/service-fabric-mesh/index.yml
+++ b/articles/service-fabric-mesh/index.yml
@@ -1,4 +1,10 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: e7347b521bf490f1148fb1c7ca7e94d502be9019
+ms.sourcegitcommit: 068fc623c1bb7fb767919c4882280cad8bc33e3a
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 07/27/2018
+ms.locfileid: "39281739"
 documentType: LandingData
 title: Dokumentation om Azure Service Fabric Mesh
 metadata:
@@ -11,14 +17,8 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 07/17/2018
+  ms.date: 07/26/2018
   ms.author: ryanwi
-  ms.openlocfilehash: d2f0a847bdc0d26ff44013e3dbe1c2c6acd0c54d
-  ms.sourcegitcommit: b9786bd755c68d602525f75109bbe6521ee06587
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 07/18/2018
-  ms.locfileid: "39124872"
 abstract:
   description: Azure Service Fabric Mesh är en helt hanterad tjänst som gör det möjligt för utvecklare att skapa och distribuera verksamhetskritiska program utan att behöva hantera någon infrastruktur.  Använd Service Fabric Mesh för att skapa och köra säkra, distribuerade mikrotjänstprogram som kan skalas på begäran. Lär dig att använda Service Fabric Mesh med hjälp av våra snabbstarter och självstudier.  Mer information finns i denna <a href="/azure/service-fabric-mesh/service-fabric-mesh-overview">översikt över Service Fabric Mesh</a>.
 sections:
@@ -45,3 +45,11 @@ sections:
     style: unordered
     items:
     - html: <a href="/azure/service-fabric-mesh/service-fabric-mesh-tutorial-create-dotnetcore">Skapa, felsöka och distribuera en webbapp för flera tjänster till Service Fabric Mesh</a>
+- title: Referens
+  items:
+  - type: list
+    style: cards
+    className: cardsD
+    items:
+    - title: REST
+      html: <p><a href="/rest/api/servicefabric/sfmeshrp-index">REST API:er för Service Fabric Mesh-resursprovider</a></p><p><a href="/rest/api/servicefabric/sfclient-index#service-fabric-resource-model">REST API:er för Service Fabric-klientresurs</a></p>
