commit translated contents

--- a/articles/security/breadcrumb/TOC.yml
+++ b/articles/security/breadcrumb/TOC.yml
@@ -10,5 +10,5 @@
   topicHref: /azure/index
   items:
     - name: Säkerhet
-      tocHref: /architecture/azure/
+      tocHref: /architecture/reference-architecture/
       topicHref: /azure/security/index
