--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -116,6 +116,8 @@
       href: concepts-pipeline-execution-triggers.md
     - name: Integration runtime
       href: concepts-integration-runtime.md
+    - name: Namngivningsregler
+      href: naming-rules.md
 - name: Instruktionsguider
   items:
     - name: Författare
