--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -24,6 +24,9 @@
         - name: Hanterad tjänstidentitet
           tocHref: /azure/active-directory/managed-service-identity/
           topicHref: /azure/active-directory/managed-service-identity/
+        - name: Användarhjälp
+          tocHref: /azure/active-directory/user-help/
+          topicHref: /azure/active-directory/user-help/
         - name: B2C
           tocHref: /azure/active-directory-b2c/
           topicHref: /azure/active-directory-b2c/
