--- a/articles/active-directory/managed-service-identity/index.yml
+++ b/articles/active-directory/managed-service-identity/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 7649d78e764c547f2211d8993514a1b793d76609
-ms.sourcegitcommit: a5eb246d79a462519775a9705ebf562f0444e4ec
+ms.openlocfilehash: d3be19c67027746ddb73cf2cd9b4545584fd3ce0
+ms.sourcegitcommit: e3d5de6d784eb6a8268bd6d51f10b265e0619e47
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 07/26/2018
-ms.locfileid: "39264056"
+ms.lasthandoff: 08/01/2018
+ms.locfileid: "39389789"
 documentType: LandingData
 title: Dokumentation om Hanterad tjänstidentitet i Azure Active Directory
 metadata:
@@ -23,6 +23,15 @@ metadata:
   ms.author: daveba
 abstract:
   description: Hanterad tjänstidentitet tillhandahåller Azure-tjänster med en automatiskt hanterad identitet i Azure Active Directory (Azure AD). Du kan använda den här identiteten för att autentisera till alla tjänster som stöder Azure AD-autentisering utan att behöva ha några autentiseringsuppgifter i koden.  Lär dig hur du skapar och hanterar hanterade tjänstidentiteter med våra snabbstarter och självstudier.
+  aside:
+    image:
+      alt: 
+      height: 112
+      src: media/index/video-thumb-landing-page.png
+      width: 200
+    title: Introduktion till Hanterad tjänstidentitet
+    href: https://www.youtube.com/embed/bBi1bll2928
+    width: 200
 sections:
 - title: Snabbstarter på 5 minuter
   items:
