--- a/articles/iot-edge/TOC.yml
+++ b/articles/iot-edge/TOC.yml
@@ -31,6 +31,8 @@
               href: tutorial-python-module.md
             - name: Node.js
               href: tutorial-node-module.md
+            - name: C
+              href: tutorial-c-module.md
     - name: Lagra data lokalt med SQL
       href: tutorial-store-data-sql-server.md
 - name: Begrepp
@@ -52,6 +54,9 @@
       href: iot-edge-as-gateway.md
     - name: Säkerhet
       href: security.md
+      items:
+        - name: Säkerhetshanteraren för IoT Edge
+          href: iot-edge-security-manager.md
     - name: Plattformssupport
       href: support.md
     - name: IoT Edge-ordlista
@@ -90,6 +95,8 @@
           href: how-to-develop-csharp-module.md
         - name: Node.js
           href: how-to-develop-node-module.md
+        - name: C
+          href: how-to-develop-c-module.md
         - name: Azure Functions
           href: how-to-develop-csharp-function.md
         - name: Utveckla flera moduler
