--- a/articles/log-analytics/index.yml
+++ b/articles/log-analytics/index.yml
@@ -1,4 +1,10 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: 49d3ca6c0958df2b0824f27e37124e48554c853b
+ms.sourcegitcommit: e3d5de6d784eb6a8268bd6d51f10b265e0619e47
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/01/2018
+ms.locfileid: "39389906"
 documentType: LandingData
 title: Log Analytics-dokumentation
 metadata:
@@ -11,14 +17,8 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 09/41/2017
+  ms.date: 07/31/2018
   ms.author: carolz
-  ms.openlocfilehash: 58a25af42f41f23a233a11cf1629e90ce8ca3433
-  ms.sourcegitcommit: 7208bfe8878f83d5ec92e54e2f1222ffd41bf931
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 07/14/2018
-  ms.locfileid: "39055510"
 abstract:
   description: Log Analytics är en del av Microsoft Azures övergripande övervakningslösning. Log Analytics övervakar molnmiljöer och lokala miljöer för att bibehålla tillgänglighet och prestanda. Få bättre överblick över arbetsbelastningar och system för att bibehålla tillgänglighet och prestanda. Lär dig hur du samlar, analyserar och hanterar data med våra snabbstarter, självstudier och exempel.
 sections:
@@ -35,11 +35,11 @@ sections:
       href: /azure/log-analytics/log-analytics-quick-collect-azurevm
     - image:
         src: https://docs.microsoft.com/media/logos/logo_linux.svg
-      text: Linux-dator
+      text: Linux-hybriddator
       href: /azure/log-analytics/log-analytics-quick-collect-linux-computer
     - image:
         src: https://docs.microsoft.com/media/logos/logo_Windows.svg
-      text: Windows-dator
+      text: Windows-hybriddator
       href: /azure/log-analytics/log-analytics-quick-collect-windows-computer
 - title: Stegvisa självstudier
   items:
