--- a/articles/power-bi-embedded/TOC.yml
+++ b/articles/power-bi-embedded/TOC.yml
@@ -3,45 +3,45 @@
 - name: Översikt
   items:
     - name: Vad är Power BI Embedded?
-      href: what-is-power-bi-embedded.md
+      href: 'https://docs.microsoft.com/power-bi/developer/azure-pbie-what-is-power-bi-embedded'
 - name: Självstudier
   items:
     - name: Exempel på att bädda in innehåll för kunder
-      href: 'https://powerbi.microsoft.com/documentation/powerbi-developer-embed-sample-app-owns-data/'
+      href: 'https://docs.microsoft.com/power-bi/developer/embed-sample-for-customers'
 - name: Begrepp
   items:
-    - name: Kom igång med Power BI Embedded
-      href: get-started.md
+    - name: Säkerhet på radnivå (RLS)
+      href: 'https://docs.microsoft.com/power-bi/developer/embedded-row-level-security'
+    - name: VANLIGA FRÅGOR OCH SVAR
+      href: 'https://docs.microsoft.com/power-bi/developer/embedded-faq'
+    - name: Power BI-behörigheter
+      href: 'https://docs.microsoft.com/power-bi/developer/power-bi-permissions'
 - name: Gör så här för att
   items:
-    - name: Hantera kapacitet
+    - name: Registrera ett program
+      href: 'https://docs.microsoft.com/power-bi/developer/register-app'
+    - name: Autentisera till Power BI-tjänst
+      href: 'https://docs.microsoft.com/power-bi/developer/get-azuread-access-token'
+    - name: Bädda in frågor och svar
+      href: 'https://docs.microsoft.com/power-bi/developer/qanda'
+    - name: Felsöka inbäddade program
+      href: 'https://docs.microsoft.com/power-bi/developer/embedded-troubleshoot'
+    - name: Hantera kapaciteter i Azure
       items:
-        - name: Skapa kapacitet
-          href: create-capacity.md
-        - name: Skala kapacitet
-          href: scale-capacity.md
-        - name: Pausa och påbörja kapacitet
-          href: pause-start.md
-    - name: Registrera en Azure AD-app
-      href: 'https://powerbi.microsoft.com/documentation/powerbi-developer-register-app/'
-    - name: Bädda in Power BI-innehåll
-      href: 'https://powerbi.microsoft.com/documentation/powerbi-developer-embedding-content/'
-    - name: Migrera
+        - name: Skapa en kapacitet i Azure
+          href: 'https://docs.microsoft.com/power-bi/developer/azure-pbie-create-capacity'
+        - name: Skala en kapacitet i Azure
+          href: 'https://docs.microsoft.com/power-bi/developer/azure-pbie-scale-capacity'
+        - name: Pausa och starta en kapacitet i Azure
+          href: 'https://docs.microsoft.com/power-bi/developer/azure-pbie-pause-start'
+    - name: Migrera från arbetsytesamlingar
       items:
         - name: Så här migrerar du från Power BI-arbetsytesamlingar
-          href: migrate-from-power-bi-workspace-collections.md
+          href: 'https://docs.microsoft.com/power-bi/developer/migrate-from-powerbi-embedded'
         - name: Migreringsverktyg
-          href: migrate-tool.md
+          href: 'https://docs.microsoft.com/power-bi/developer/migrate-tool'
         - name: Kodfragment för migrering
-          href: migrate-code-snippets.md
-- name: Exempel
-  items:
-    - name: Kodexempel
-      href: 'https://github.com/Microsoft/PowerBI-Developer-Samples'
-    - name: Exempelgenomgång
-      href: 'https://powerbi.microsoft.com/documentation/powerbi-developer-embed-sample-app-owns-data/'
-    - name: Inbäddat exempel med JavaScript
-      href: 'https://microsoft.github.io/PowerBI-JavaScript/demo/'
+          href: 'https://docs.microsoft.com/power-bi/developer/migrate-code-snippetsd'
 - name: Referens
   items:
     - name: 'API:er'
@@ -52,17 +52,31 @@
           href: 'https://msdn.microsoft.com/library/mt147898.aspx'
 - name: Resurser
   items:
-    - name: Power BI Community
-      href: 'http://community.powerbi.com/t5/Developer/bd-p/Developer'
+    - name: Dev Center
+      href: 'https://powerbi.microsoft.com/developers/'
+    - name: Registreringsupplevelseverktyg för inbäddning
+      href: 'https://aka.ms/embedsetup'
+    - name: Kodexempel
+      href: 'https://github.com/Microsoft/PowerBI-Developer-Samples'
     - name: Hämta .NET SDK
       href: 'https://www.nuget.org/packages/Microsoft.PowerBI.Api/'
     - name: Nedladdning av JavaScript SDK
       href: 'https://www.nuget.org/packages/Microsoft.PowerBI.JavaScript/'
+    - name: .NET för Power BI
+      href: 'https://github.com/Microsoft/PowerBI-CSharp'
+    - name: JavaScript för Power BI
+      href: 'https://github.com/Microsoft/PowerBI-JavaScript'
+    - name: Testplatsexempel för Javascript
+      href: 'https://go.microsoft.com/fwlink/?linkid=848279'
+    - name: Power BI JavaScript-wiki
+      href: 'https://github.com/Microsoft/powerbi-javascript/wiki'
+    - name: JavaScript Git-lagringsplats
+      href: 'https://go.microsoft.com/fwlink/?linkid=848276'
+    - name: 'Power BI C# Git-lagringsplats'
+      href: 'https://go.microsoft.com/fwlink/?linkid=848273'
     - name: Priskalkylator
-      href: 'https://azure.microsoft.com/pricing/calculator/'
-    - name: GitHub-lagringsplatser
-      items:
-        - name: .NET för Power BI
-          href: 'https://github.com/Microsoft/PowerBI-CSharp'
-        - name: JavaScript för Power BI
-          href: 'https://github.com/Microsoft/PowerBI-JavaScript'
+      href: 'https://azure.microsoft.com/pricing/calculator/#power-bi-embedded88e5eed8-6a98-4891-a739-15b602b4fb34'
+    - name: Power BI Community
+      href: 'http://community.powerbi.com/t5/Developer/bd-p/Developer'
+    - name: Stack Overflow
+      href: 'https://go.microsoft.com/fwlink/?linkid=848281'
