--- a/articles/stream-analytics/TOC.yml
+++ b/articles/stream-analytics/TOC.yml
@@ -46,10 +46,14 @@
       href: stream-analytics-compatibility-level.md
     - name: Vanliga frågemönster
       href: stream-analytics-stream-analytics-query-patterns.md
+    - name: Arbeta med komplexa datatyper i JSON och AVRO
+      href: 'https://msdn.microsoft.com/azure/stream-analytics/reference/complex-data-types-stream-analytics'
     - name: Överväganden för händelseordning
       href: stream-analytics-out-of-order-and-late-events.md
     - name: Kontrollpunkt och återuppspelning
       href: stream-analytics-concepts-checkpoint-replay.md
+    - name: Felprincip
+      href: output-error-policy.md
 - name: Anvisningsguider
   items:
     - name: Hantera
